<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cindykendall.roadsignquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView style="@style/Title"/>

        <ImageView style="@style/Banner"
            android:contentDescription="@string/banner_of_signs" />

        <TextView style="@style/Directions" />

        <View style="@style/Divider"/>

        <EditText
            android:id="@+id/name"
            style="@style/Name" />

        <View style="@style/Divider"/>


        <TextView
            android:id="@+id/question_one_title"
            android:text="@string/sign_1"
            style="@style/Question"  />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/question_one_image"
                style="@style/Sign"
                android:src="@drawable/image2"
                android:contentDescription="@string/road_sign"/>

            <RadioGroup
                android:id="@+id/question_one_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/caution_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/caution" />
                <RadioButton
                    android:id="@+id/stop_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/stop" />
                <RadioButton
                    android:id="@+id/yield_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/yield" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/sign1_answer_display"
            style="@style/Answer"
            android:text="@string/sign1_answer"
            android:visibility="invisible" />

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/question_two_title"
            android:text="@string/sign_2"
            style="@style/Question"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/question_two_image"
                style="@style/Sign"
                android:src="@drawable/image5"
                android:contentDescription="@string/road_sign"/>

            <RadioGroup
                android:id="@+id/question_two_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/bump_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/bump_ahead"/>
                <RadioButton
                    android:id="@+id/hilly_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/hilly_road" />
                <RadioButton
                    android:id="@+id/lodging_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/lodging"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/sign2_answer_display"
            style="@style/Answer"
            android:text="@string/sign2_answer"
            android:visibility="invisible" />

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/question_three_title"
            android:text="@string/sign_3"
            style="@style/Question" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/question_three_image"
                style="@style/Sign"
                android:src="@drawable/image12"
                android:contentDescription="@string/road_sign"/>

            <RadioGroup
                android:id="@+id/question_three_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/pass_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/pass_on_either_side" />
                <RadioButton
                    android:id="@+id/split_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/split_road" />
                <RadioButton
                    android:id="@+id/single_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/single_lanes" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/sign3_answer_display"
            style="@style/Answer"
            android:text="@string/sign3_answer"
            android:visibility="invisible" />

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/question_four_title"
            android:text="@string/sign_4"
            style="@style/Question" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/question_four_image"
                style="@style/Sign"
                android:src="@drawable/image4"
                android:contentDescription="@string/road_sign"/>

            <RadioGroup
                android:id="@+id/question_four_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/sleep_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/sleep_when_tired"/>
                <RadioButton
                    android:id="@+id/surveillance_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/surveillance_cameras" />
                <RadioButton
                    android:id="@+id/lowBeam_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/low_beam_headlights_required" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/sign4_answer_display"
            style="@style/Answer"
            android:text="@string/sign4_answer"
            android:visibility="invisible" />

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/question_five_title"
            android:text="@string/sign_5"
            style="@style/Question" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/question_five_image"
                style="@style/Sign"
                android:src="@drawable/image6"
                android:contentDescription="@string/road_sign"/>

            <RadioGroup
                android:id="@+id/question_five_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/narrow_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/narrow_road" />
                <RadioButton
                    android:id="@+id/construction_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/construction" />
                <RadioButton
                    android:id="@+id/rocks_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/falling_rocks" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/sign5_answer_display"
            style="@style/Answer"
            android:text="@string/sign5_answer"
            android:visibility="invisible" />

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/question_six_title"
            android:text="@string/sign_6"
            style="@style/Question"  />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/question_six_image"
                style="@style/Sign"
                android:src="@drawable/image13"
                android:contentDescription="@string/road_sign"/>

            <RadioGroup
                android:id="@+id/question_six_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/railroad_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/railroad_crossing" />
                <RadioButton
                    android:id="@+id/enter_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/do_not_enter" />
                <RadioButton
                    android:id="@+id/end_radio_button"
                    style="@style/RadioButton"
                    android:text="@string/road_ends" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/sign6_answer_display"
            style="@style/Answer"
            android:text="@string/sign6_answer"
            android:visibility="invisible" />

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/question_seven_checkbox_group"
            android:text="@string/sign_7"
            style="@style/Question" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/question_seven_imageA"
                style="@style/Sign"
                android:src="@drawable/image15"
                android:contentDescription="@string/road_sign"/>

            <CheckBox
                android:id="@+id/sign1_checkbox"
                android:text="@string/checkbox_label_a"
                style="@style/Checkbox" />

            <ImageView
                android:id="@+id/question_seven_imageB"
                style="@style/Sign"
                android:src="@drawable/image16"
                android:contentDescription="@string/road_sign"/>

            <CheckBox
                android:id="@+id/sign2_checkbox"
                android:text="@string/checkbox_label_c"
                style="@style/Checkbox" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/question_seven_imageC"
                style="@style/Sign"
                android:src="@drawable/image17"
                android:contentDescription="@string/road_sign"/>

            <CheckBox
                android:id="@+id/sign3_checkbox"
                android:text="@string/checkbox_label_b"
                style="@style/Checkbox" />


            <ImageView
                android:id="@+id/question_seven_imageD"
                style="@style/Sign"
                android:src="@drawable/image18"
                android:contentDescription="@string/road_sign"/>

            <CheckBox
                android:id="@+id/sign4_checkbox"
                android:text="@string/checkbox_label_d"
                style="@style/Checkbox" />

        </LinearLayout>

        <TextView
            android:id="@+id/sign7_answer_display"
            style="@style/Answer"
            android:text="@string/sign7_answer"
            android:visibility="invisible" />

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/question_eight_title"
            android:text="@string/sign_8"
            style="@style/Question"  />

        <TextView
            android:id="@+id/question_eight_intro"
            android:text="@string/question_8_intro"
            style="@style/QuestionDirections"  />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/question_eight_image"
                style="@style/Sign"
                android:src="@drawable/image19"
                android:contentDescription="@string/road_sign"/>
            <EditText
                android:id="@+id/question8_answer"
                style="@style/NameSign" />

        </LinearLayout>

        <TextView
            android:id="@+id/sign8_answer_display"
            style="@style/Answer"
            android:text="@string/sign8_answer"
            android:visibility="invisible" />

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="12dp">

            <Button
                android:id="@+id/submit_button"
                style="@style/ScoreButton"
                android:onClick="submitQuiz"
                android:text="@string/submit"/>

            <Button
                android:id="@+id/reset_button"
                style="@style/ScoreButton"
                android:onClick="resetButton"
                android:text="@string/reset" />

        </LinearLayout>

        <TextView
            android:id="@+id/total_score_text_view"
            style="@style/ScoreReport"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="12dp">

            <Button
                android:id="@+id/view_answers"
                style="@style/ScoreButton"
                android:onClick="viewAnswers"
                android:text="@string/viewAnswerButton"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
